--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -4,7 +4,7 @@ CXXFLAGS=-Werror -Wall -Wextra -std=c++98
 
 NAME=Polymorphism
 
-SRC=main.cpp Dog.cpp Cat.cpp Animal.cpp Brain.cpp
+SRC=main.cpp Dog.cpp Cat.cpp Animal.cpp Brain.cpp WrongAnimal.cpp WrongDog.cpp WrongCat.cpp
 
 OBJ_DIR=obj
 
